<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/country_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/country_name"
        />

    <TextView
        android:id="@+id/short_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/short_name"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/full_name"
        />

    <TextView
        android:id="@+id/display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_name"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/short_name"
        />

    <TextView
        android:id="@+id/primary_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/primary_name"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/display_name"
        />

    <TextView
        android:id="@+id/secondary_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/secondary_name"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/primary_name"
        />

    <TextView
        android:id="@+id/lastSearch_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_search_name"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/secondary_name"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>