<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="422dp"
        android:layout_height="730dp"
        android:contentDescription="@string/sign_up_img"
        android:src="@drawable/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ImageContrastCheck,VisualLintBounds" />

    <EditText
        android:id="@+id/txt1"
        android:layout_width="305dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColor="@color/greenish"
        android:textColorHighlight="@color/greenish"
        android:textColorHint="@color/white"
        android:textColorLink="@color/greenish"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txt2"
        android:layout_width="305dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColor="@color/greenish"
        android:textColorHighlight="@color/greenish"
        android:textColorHint="@color/white"
        android:textColorLink="@color/greenish"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/email"
        android:layout_width="305dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/greenish"
        android:textColorHighlight="@color/greenish"
        android:textColorHint="@color/white"
        android:textColorLink="@color/greenish"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/password"
        android:layout_width="305dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/greenish"
        android:textColorHighlight="@color/greenish"
        android:textColorHint="@color/white"
        android:textColorLink="@color/greenish"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/greenish"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:cornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.23"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>