<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="422dp"
        android:layout_height="720dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454"
        app:srcCompat="@drawable/login"
        android:contentDescription="@string/LoginImage"
        tools:ignore="VisualLintBounds" />

    <EditText
        android:id="@+id/email"
        android:layout_width="305dp"
        android:layout_height="60dp"
        android:layout_marginTop="92dp"
        android:autofillHints=""
        android:textColor="@color/greenish"
        android:textSize="20sp"
        android:textStyle="bold"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHighlight="@color/greenish"
        android:textColorHint="@color/white"

        android:textColorLink="@color/greenish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/password"
        android:layout_width="305dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:ems="10"
        android:textColor="@color/greenish"
        android:textSize="20sp"
        android:textStyle="bold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHighlight="@color/greenish"
        android:textColorHint="@color/white"
        android:textColorLink="@color/greenish"
        app:layout_constraintBottom_toBottomOf="@+id/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.019" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/greenish"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:cornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.359"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>